# astroquery

./: ' : column_units)  .gitignore  .gitmodules  .mailmap  .pep8speaks.yml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  .trigger_app_build.sh  CHANGES  CHANGES.rst  CITATION  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  TEMPLATE_CHANGES.md  abdus.txt  ah_bootstrap.py  appveyor.yml  conftest.py  coverage.xml  distribute_setup.py  example.md  example2.md  index.html  most_test_query.py  oacapi_test.py  pip-requirements  pyproject.toml  pytest.ini  setup.cfg  setup.py  tj-test.py  tox.ini  version.py  version_deployment.py  xx
.github/: dependabot.yml  release.yml
.github/workflows/: cancel_workflows.yml  changelog.yml  ci_crontests.yml  ci_devtests.yml  ci_esotests.yml  ci_online_crontests.yml  ci_tests.yml  codeql-analysis.yml  milestone.yml  rebase.yml
astrodata/besancon/: __init__.py  besancon.py
astrodata/irsa/: irsa.py
astrodata/magpis/: __init__.py  magpis.py
astrodata/ukidss/: ukidss.py
astrodata/utils/: progressbar.py
astroquery/: CITATION  QueryClass.py  __init__.py  _astropy_init.py  astroquery.cfg  conftest.py  cython_version.py  exceptions.py  logger.py  name_parser.py  query.py  setup_package.py
astroquery/ads/: __init__.py  core.py
astroquery/alfa/: core.py
astroquery/alfalfa/: __init__.py  core.py
astroquery/alma/: README.rst  __init__.py  core.py  setup_package.py  tapsql.py  utils.py
astroquery/astorbdb/: __init__.py  core.py
astroquery/astrocats/: __init__.py  core.py
astroquery/astrometry_net/: __init__.py  core.py  run_anet.py
astroquery/atomic/: __init__.py  core.py  setup_package.py  utils.py
astroquery/besancon/: __init__.py  besancon.py  besancon_reader.py  core.py  reader.py
astroquery/cadc/: __init__.py  auth.py  core.py
astroquery/casda/: __init__.py  core.py
astroquery/cdms/: __init__.py  core.py  setup_package.py
astroquery/cds/: README.rst  __init__.py  constrains.py  constraints.py  core.py  dataset.py  environment.yml  example1.ipynb  example2.ipynb  output_format.py  properties_constraint.py  property_constrain.py  property_constraint.py  spatial_constrains.py  spatial_constraints.py
astroquery/chinavo/: __init__.py  _query_data.py  _response_utils.py  conftest.py
astroquery/cosmosim/: __init__.py  core.py  core.py.orig
astroquery/dace/: __init__.py  core.py
astroquery/dastcom5/: __init__.py  core.py  dastcom5.py
astroquery/data/: README.rst  exoplanet_nexsci_units.json
astroquery/desi/: __init__.py  core.py
astroquery/esa_hubble/: __init__.py  core.py
astroquery/esasky/: __init__.py  core.py  example3_votable_output.vot  gaia_query_example.py_orig  hipparcos2_esasky.vot
astroquery/eso/: __init__.py  core.py  utils.py
astroquery/exoplanet_archive/: __init__.py  exoplanet_archive.py  setup_package.py
astroquery/exoplanet_orbit_database/: __init__.py  exoplanet_orbit_database.py  setup_package.py
astroquery/exoplanets/: __init__.py  exoplanet_archive.py  exoplanets_nexsci.py  exoplanets_org.py  planet_params.py  setup_package.py
astroquery/exoplanets_org/: __init__.py  exoplanets_org.py  setup_package.py
astroquery/fermi/: __init__.py  core.py  lat_data.py  setup_package.py
astroquery/fermilat/: __init__.py  fermilat.py
astroquery/first/: __init__.py  core.py
astroquery/gaia/: CHANGES.rst  __init__.py  core.py
astroquery/gaiatap/: CHANGES.rst  __init__.py  core.py  gaiatap.rst
astroquery/gama/: __init__.py  core.py
astroquery/gemini/: __init__.py  core.py  urlhelper.py
astroquery/heasarc/: __init__.py  core.py  heasarc_browse.py  my.sql  tj-test.py  tjs_python.py  toms.sql  xamin.py
astroquery/higal/: __init__.py  core.py
astroquery/hips2fits/: __init__.py  core.py
astroquery/hitran/: __init__.py  core.py  reader.py  setup_package.py  utils.py
astroquery/hsa/: __init__.py  core.py
astroquery/hsc/: __init__.py  core.py
astroquery/hst/: __init__.py  core.py  handler.py
astroquery/hyperleda/: __init__.py  core.py
astroquery/ibe/: __init__.py  core.py
astroquery/imcce/: __init__.py  core.py
astroquery/irsa/: __init__.py  core.py  irsa.py
astroquery/irsa_dust/: __init__.py  core.py  utils.py
astroquery/irsadust/: __init__.py  irsa_dust.py  utils.py
astroquery/jpl_spectral_catalog/: __init__.py  core.py  setup_package.py
astroquery/jplhorizons/: __init__.py  core.py
astroquery/jplsbdb/: __init__.py  core.py
astroquery/jplspec/: __init__.py  core.py  lookup_table.py  setup_package.py
astroquery/jwst/: __init__.py  core.py  data_access.py
astroquery/lamda/: __init__.py  core.py  utils.py
astroquery/lco/: __init__.py  core.py
astroquery/lcogt/: __init__.py  core.py
astroquery/legacysurvey/: __init__.py  core.py
astroquery/linelists/: __init__.py  core.py
astroquery/lowellmps/: __init__.py  core.py
astroquery/magpis/: __init__.py  core.py  magpis.py
astroquery/mast/: __init__.py  auth.py  catalog_collection.py  cloud.py  collections.py  (+11 more)
build-docs/: .buildinfo  api.html  changelog.html  configuration.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  query.html  search.html  searchindex.js  template.html  testing.html  utils.html
cextern/: README.rst
dev/: README.rst  make_tevcat_test_file.py
docs/: alfalfa.rst  api.rst  besancon.rst  conf.py  conftest.py  cosmosim.rst  developer.rst  eso.rst  fermi.rst  gallery.rst  gama.rst  index.rst  install.rst  irsa.rst  irsa_dust.rst  lamda.rst  license.rst  magpis.rst  make_doctests.py  ned.rst  nist.rst  nrao.rst  nvas.rst  ogle.rst  overview.rst  py-modindex.rst  release_notice_v0.2.rst  rtd-pip-requirements  rtd_environment.yaml  sdss.rst  services_alph.rst  services_type.rst  sha.rst  simbad.rst  splatalogue.rst  team.rst  template.rst  testing.rst  ukidss.rst  utils.rst  (+1 more)
frontpage/: Makefile  make_frontpage.sh
licenses/: LICENSE.rst  README.rst  SCHEMA.rst
packagename/: __init__.py  _astropy_init.py  conftest.py  example_c.pyx  example_mod.py
scripts/: README.rst  script_example
solarsystem/: __init__.py
(+2699 files in other folders)
