[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build docs/gallery-examples
doctest_plus = enabled
text_file_format = rst
addopts = -p no:warnings
xfail_strict = true
remote_data_strict = true

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astroquery
description = Functions and classes to access online astronomical data resources
long_description =
author = Adam Ginsburg
author_email =
license = BSD
url = http://astropy.org/astroquery
edit_on_github = False
github_project = astropy/astroquery


# We now have section for the pycodestyle command. We need to repeat the.
# Rather than check all warnings, we only test for a subset of them for now.

# PEP8 errors/warnings:
# E101 - mix of tabs and spaces
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E124 - bracket does not match indentation
# E201 - whitespace after '('
# E202 - whitespace before ')'
# E203 - whitespace before ','
# E211 - whitespace before '('
# E221 - multiple spaces before operator
# E225 - missing whitespace around operator
# E231 - missing whitespace after ','
# E241 - multiple whitespace after ','
# E251 - unexpected spaces around keyword / parameter equals
# E261 - at least two spaces before inline comment
# E265 - block comment should start with '# '
# E271 - multiple spaces after keyword
# E272 - multiple spaces before keyword
# E301 - missing blank lines
# E302 - missing blank lines
# E303 - too many blank lines
# E305 - missing blank lines
# E502 - the backslash is redundant between brackets
# E703 - statement ends with a semicolon
# E711 - comparison to None should be 'if cond is None:'
# E712 - comparison to True should be 'if cond is True:' or 'if cond:'
# E714 - test for object identity should be 'is not'
# E722 - do not use bare except
# E901 - SyntaxError or IndentationError
# E902 - IOError
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file

# If you want to exclude a line from checking, simply add ' # noqa' at the
# end of the line

[pycodestyle]
select = E101,E111,E112,E113,E124,E201,E202,E203,E211,E221,E225,E231,E241,E251,E261,E265,E271,E272,E301,E302,E303,E305,E502,E703,E711,E712,E714,E722,E901,E902,W191,W291,W292,W293,W391

# E402 module level import not at top of file
# We need to ignore this as the .conf has to be set in the __init__.py
# before the modules are imported.
ignore = E402

# Excluding files that are directly copied from the package template or
# generated
exclude = _astropy_init.py,version.py

# E226 missing whitespace around operators
# E402 module level import not at top of file
# W503 line break before operator
# Stricter settings for people who use flake8 in their editors
[flake8]
max-line-length = 120
ignore = E226,E402,W503
exclude = _astropy_init.py,version.py

[entry_points]
