[metadata]
name = astroquery
version = 0.4.7.dev
description = Functions and classes to access online astronomical data resources
# FIXME long_description =
author = The Astroquery Developers
license = BSD
url = http://astropy.org/astroquery
edit_on_github = False
github_project = astropy/astroquery


[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 6.0
norecursedirs = build docs/_build astroquery/irsa astroquery/nasa_exoplanet_archive astroquery/ned astroquery/ibe astroquery/irsa_dust astroquery/sha
testpaths = astroquery docs
doctest_plus = enabled
astropy_header = true
text_file_format = rst
xfail_strict = true
remote_data_strict = true
addopts = --color=yes --doctest-rst
filterwarnings =
    error
#   These are temporary measures, all of these should be fixed:
#   -----------------------------------------------------------
    ignore:distutils Version classes are deprecated:DeprecationWarning
# Upstream issues in many packages, not clear whether we can do anything about these in astroquery
    ignore:unclosed <socket.socket:ResourceWarning
    ignore:unclosed <ssl.SSLSocket:ResourceWarning
# Various VO warnings from vo_conesearch
    ignore::astropy.io.votable.exceptions.W21
    ignore::astropy.io.votable.exceptions.W42
# utils.commons.FileContainer needs a refactor
    ignore:FITS files must be read as binaries:astroquery.exceptions.InputWarning
# utils.commons.parse_coordinates, we should remove its usage:
    ignore:Coordinate string is being interpreted as an ICRS coordinate:astroquery.exceptions.InputWarning
    ignore:Coordinate string is being interpreted as an ICRS coordinate:UserWarning
# To be removed with a fix for https://github.com/astropy/astroquery/issues/2523
    ignore::bs4.builder.XMLParsedAsHTMLWarning
# To be removed with a fix for https://github.com/astropy/astroquery/issues/2242
     ignore::astropy.io.votable.exceptions.E02
# Warnings from yet to be refactored or to be removed modules
    ignore:Experimental. ALFALFA:UserWarning
    ignore:Experimental. Fermi-LAT:UserWarning
    ignore:Experimental. SHA:UserWarning
    ignore:Experimental. OGLE:UserWarning:
# Warnings from deprecated or known-to-be-broken modules
    ignore:The legacy NRAO archive this module uses has been retired:UserWarning
    ignore:vamdclib could not be imported; the vamdc astroquery module will not work:UserWarning
    ignore:the vamdc astroquery module:astropy.utils.exceptions.AstropyDeprecationWarning
# Leap second update related warning
    ignore:leap-second auto-update failed:astropy.utils.exceptions.AstropyWarning
# Should ignore these for astropy<5.0
    ignore:getName|currentThread:DeprecationWarning:astropy
# This should be cleared once we requre astropy>=4.1
    ignore:tostring\(\) is deprecated. Use tobytes:DeprecationWarning:astropy
markers =
    bigdata: marks tests that are expected to trigger a large download (deselect with '-m "not bigdata"')
    noautofixt: disabling fixture autouse

[ah_bootstrap]
auto_use = True

# We now have section for the pycodestyle command. We need to repeat the.
# Rather than check all warnings, we only test for a subset of them for now.

# PEP8 errors/warnings:
# E101 - mix of tabs and spaces
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E124 - bracket does not match indentation
# E201 - whitespace after '('
# E202 - whitespace before ')'
# E203 - whitespace before ','
# E211 - whitespace before '('
# E221 - multiple spaces before operator
# E225 - missing whitespace around operator
# E231 - missing whitespace after ','
# E241 - multiple whitespace after ','
# E251 - unexpected spaces around keyword / parameter equals
# E261 - at least two spaces before inline comment
# E265 - block comment should start with '# '
# E271 - multiple spaces after keyword
# E272 - multiple spaces before keyword
# E301 - missing blank lines
# E302 - missing blank lines
# E303 - too many blank lines
# E305 - missing blank lines
# E502 - the backslash is redundant between brackets
# E703 - statement ends with a semicolon
# E711 - comparison to None should be 'if cond is None:'
# E712 - comparison to True should be 'if cond is True:' or 'if cond:'
# E714 - test for object identity should be 'is not'
# E722 - do not use bare except
# E901 - SyntaxError or IndentationError
# E902 - IOError
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file

# If you want to exclude a line from checking, simply add ' # noqa' at the
# end of the line

[pycodestyle]
select = E101,E111,E112,E113,E124,E201,E202,E203,E211,E221,E225,E231,E241,E251,E261,E265,E271,E272,E301,E302,E303,E305,E502,E703,E711,E712,E714,E722,E901,E902,W191,W291,W292,W293,W391

# E402 module level import not at top of file
# We need to ignore this as the .conf has to be set in the __init__.py
# before the modules are imported.
ignore = E402

# Excluding files that are directly copied from the package template or
# generated
exclude = _astropy_init.py,version.py

# E226 missing whitespace around operators
# E402 module level import not at top of file
# W503 line break before operator
# Stricter settings for people who use flake8 in their editors
[flake8]
max-line-length = 120
select = F
ignore = E226,E402,W503
exclude = _astropy_init.py,version.py,astroquery/template_module

[coverage:run]
omit =
  astroquery/*_init*
  astroquery/tests/*
  astroquery/*/tests/*
  astroquery/*setup*
  astroquery/version*
  */astroquery/*_init*
  */astroquery/tests/*
  */astroquery/*/tests/*
  */astroquery/*setup*
  */astroquery/version*

[entry_points]

[options]

python_requires = >=3.7

install_requires=
   numpy>=1.16
   astropy>=4.0
   requests>=2.4.3
   beautifulsoup4>=4.3.2
   html5lib>=0.999
   keyring>=4.0
   pyvo>=1.1
tests_require =
   pytest-doctestplus>=0.10.1
   pytest-astropy

[options.extras_require]
test=
   pytest-astropy
   matplotlib
   jinja2
   flask
   pytest-dependency
   pytest-rerunfailures
docs=
   matplotlib
   sphinx-astropy>=1.5
   scipy
all=
   mocpy>=0.5.2
   astropy-healpix
   boto3
   regions
