[metadata]
name = astroquery
version = 0.4.11.dev
description = Functions and classes to access online astronomical data resources
author = The Astroquery Developers
license = BSD
project_urls =
    Source = https://github.com/astropy/astroquery
    Documentation = https://astroquery.readthedocs.io
edit_on_github = False
github_project = astropy/astroquery
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: BSD License

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 7.4
norecursedirs = build docs/_build astroquery/irsa astroquery/nasa_exoplanet_archive astroquery/ned astroquery/ibe astroquery/irsa_dust astroquery/cds astroquery/sha astroquery/dace
testpaths = astroquery docs
doctest_plus = enabled
astropy_header = true
text_file_format = rst
xfail_strict = true
remote_data_strict = true
addopts = --color=yes --doctest-rst --doctest-continue-on-failure
filterwarnings =
    error
# Remove along with astropy-helpers, once we switch to a new versioning scheme
    ignore:Use setlocale:DeprecationWarning
    ignore: 'locale.getdefaultlocale' is deprecated and slated for removal:DeprecationWarning
#   These are temporary measures, all of these should be fixed:
#   -----------------------------------------------------------
    ignore:distutils Version classes are deprecated:DeprecationWarning
# Upstream issues in many packages, not clear whether we can do anything about these in astroquery
    ignore:unclosed <socket.socket:ResourceWarning
    ignore:unclosed <ssl.SSLSocket:ResourceWarning
# Various VO warnings from vo_conesearch
    ignore::astropy.io.votable.exceptions.W21
    ignore::astropy.io.votable.exceptions.W42
# utils.commons.FileContainer needs a refactor
    ignore:FITS files must be read as binaries:astroquery.exceptions.InputWarning
# utils.commons.parse_coordinates, we should remove its usage:
    ignore:Coordinate string is being interpreted as an ICRS coordinate:astroquery.exceptions.InputWarning
    ignore:Coordinate string is being interpreted as an ICRS coordinate:UserWarning
# To be removed with a fix for https://github.com/astropy/astroquery/issues/2242
    ignore::astropy.io.votable.exceptions.E02
# Warnings from yet to be refactored or to be removed modules
    ignore:Experimental. ALFALFA:UserWarning
    ignore:Experimental. Fermi-LAT:UserWarning
    ignore:Experimental. SHA:UserWarning
    ignore:Experimental. OGLE:UserWarning:
# Warnings from deprecated or known-to-be-broken modules. They have to be listed to make test collection work,
# Can be removed once the modules are removed.
    ignore:vamdclib could not be imported; the vamdc astroquery module will not work:UserWarning
    ignore:the vamdc astroquery module:astropy.utils.exceptions.AstropyDeprecationWarning
    # exoplanet_orbit_database
    ignore:due to the retirement of its upstream website:astropy.utils.exceptions.AstropyDeprecationWarning
# Leap second update related warning
    ignore:leap-second auto-update failed:astropy.utils.exceptions.AstropyWarning
# Should ignore these for astropy<5.0
    ignore:getName|currentThread:DeprecationWarning:astropy
# Numpy 2.0 deprecations triggered by upstream libraries.
# Exact warning messages differ, thus using a super generic filter.
    ignore:numpy.core:DeprecationWarning
# SHA module deprecation/defunct
    ignore:The upstream SHA API has been changed:UserWarning
# CDMS triggers this, but we don't use it directly
    ignore: The 'strip_cdata' option of HTMLParser:DeprecationWarning
# Triggered in mast, likely boto related
    ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning
# CoverageWarnings triggered by one of the other plugins(?). Either case, explicitely
# ignore it here to have passing test for pytest 8.4.
    ignore:Module astroquery was previously imported, but not measured:coverage.exceptions.CoverageWarning

markers =
    bigdata: marks tests that are expected to trigger a large download (deselect with '-m "not bigdata"')
    noautofixt: disabling fixture autouse

[ah_bootstrap]
auto_use = True

[pycodestyle]

# E402 module level import not at top of file
# We need to ignore this as the .conf has to be set in the __init__.py
# before the modules are imported.
ignore = E402

# Excluding files that are directly copied from the package template or
# generated
exclude = _astropy_init.py,version.py

# E226 missing whitespace around operators
# E402 module level import not at top of file
# W503 line break before operator
# Stricter settings for people who use flake8 in their editors
[flake8]
max-line-length = 120
ignore = E226,E402,W503
exclude = _astropy_init.py,version.py,astroquery/template_module,astroquery/simbad/criteria_*.py

[coverage:run]
omit =
  astroquery/*_init*
  astroquery/**/tests/*
  astroquery/*setup*
  astroquery/version*
  */astroquery/*_init*
  */astroquery/**/tests/*
  */astroquery/*setup*
  */astroquery/version*

[entry_points]

[options]

python_requires = >=3.9

install_requires=
   numpy>=1.20
   astropy>=5.0
   requests>=2.19
   beautifulsoup4>=4.8
   html5lib>=0.999
   keyring>=15.0
   pyvo>=1.5
tests_require =
   pytest-doctestplus>=0.13
   pytest-astropy

[options.extras_require]
test=
   pytest-astropy
   matplotlib
   pytest-dependency
   pytest-rerunfailures
   fsspec[http]
   moto[s3]
docs=
   # https://github.com/astropy/astroquery/issues/3102
   sphinx-automodapi<0.18
   matplotlib
   sphinx-astropy>=1.5
   scipy
   fsspec[http]
all=
   mocpy>=0.12
   astropy-healpix
   boto3
   regions>=0.5
